<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.anton.familienband.MainActivity">

    <item
        android:id="@+id/action_day"
        android:icon="@drawable/ic_today"
        android:title="@string/menu_item_day"
        android:orderInCategory="100"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_buildings"
        android:title="@string/menu_item_buildings_plan"
        android:orderInCategory="101"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_settings"
        android:title="@string/menu_item_settings"
        android:orderInCategory="102"
        app:showAsAction="never"/>


</menu>
